<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B388FF"
    tools:context=".view.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Login"
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Email"
        android:padding="10dp"
        android:background="@color/white"
        android:id="@+id/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="Password"
        android:padding="10dp"
        android:background="@color/white"
        android:id="@+id/password"/>
    <Button
        android:id="@+id/login"
        android:layout_width="383dp"
        android:layout_height="60dp"
        android:shadowColor="#4F100F0F"
        android:layout_marginTop="15sp"
        android:text="LOGIN"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcom"
        android:layout_marginTop="15dp"
        android:id="@+id/register_user"/>

</LinearLayout>